--- a/app/ReferralManagement Generated Styles.customCSS.css
+++ b/app/ReferralManagement Generated Styles.customCSS.css
@@ -226,7 +226,7 @@ $backgroundImage=$config->getParameter('backgroundImage', array());
             ?>
 
             .inline-btn.optionlist:before {
-                background-image: url("<?php echo UrlFrom($optionsMenuIcon); ?>");
+                background-image: url("<?php echo UrlFrom($optionsMenuIcon); ?>?tint=<?php echo $config->getParameter("menuIconColor", "rgb(180,180,180)"); ?>");
                 display: inline-block;
                 width: 6px;
                 height: 25px;
@@ -234,6 +234,9 @@ $backgroundImage=$config->getParameter('backgroundImage', array());
                 background-position: center;
                 content: "";
                 background-repeat: no-repeat;
+            }
+            .inline-btn.optionlist:hover:before {
+             background-image: url("<?php echo UrlFrom($optionsMenuIcon); ?>?tint=<?php echo $config->getParameter("menuIconTint"); ?>");
             }
             <?php
         }
