--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -122,6 +122,10 @@ h2 {
     padding: 7px 10px;
 }
 
+.project-detail .FormattedTextModule.content, .project-detail .inline-list-item{
+    padding: 24px;
+}
+
 .project-tasks.ui-list-view .ui-view:last-child{
     border-bottom: none;
 }
