-- Auto Commit - Changes made through Frontend Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -122,7 +122,7 @@ h2 {
     padding: 7px 10px;
 }
 
-.project-detail .FormattedTextModule.content, .project-detail .inline-list-item{
+.project-detail .FormattedTextModule.project-description, .project-detail .inline-list-item{
     padding: 24px;
 }
 .project-detail .project-title {
