-- Auto Commit - Changes made through Frontend Interface

--- a/app/ReferralManagement Generated Styles.customCSS.css
+++ b/app/ReferralManagement Generated Styles.customCSS.css
@@ -244,9 +244,11 @@ $backgroundImage=$config->getParameter('backgroundImage', array());
         
         
         if(!$config->getParameter("showFileThumbnails")){
+            ?>
             .image.attachment-thumb{
                 display:none;
             }
+            <?php
         }
         
         
