--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -525,15 +525,19 @@ span.inline-list-item {
 }
 .bar.active.hasSegments .segment{
     border-color: #EDC84C;
-    background-color: rgba(237, 200, 76, 0.1);
+   /*background-color: rgba(237, 200, 76, 0)*/;
 }
 
 .segment.complete {
-    background-color: rgba(106, 233, 191, 0.7);
+    background-color: rgba(106, 233, 191, 1);
+}
+
+.segment.created {
+    background-color: mediumseagreen;
 }
 
 .segment.overdue {
-    background-color: rgba(233, 106, 106, 0.7);
+    background-color: rgba(233, 106, 106, 1);
 }
 
 .bar.active.hasSegments .segment.complete{
