-- Auto Commit - Changes made through Frontend Interface

--- a/app/ReferralManagement Generated Styles.customCSS.css
+++ b/app/ReferralManagement Generated Styles.customCSS.css
@@ -143,16 +143,16 @@ foreach($config->getParameters() as $key=>$value){
 
 
 .segment.overdue{
-    background-image:url("<?php echo UrlFrom($overdueIcon); ?>?tint=rgba(0,0,0)";
+    background-image:url("<?php echo UrlFrom($overdueIcon); ?>?tint=rgba(0,0,0)");
 }
 .segment.complete{
-     background-image:url("<?php echo UrlFrom($remainingIcon); ?>?tint=rgba(0,0,0)";
+     background-image:url("<?php echo UrlFrom($remainingIcon); ?>?tint=rgba(0,0,0)");
 }
 .segment.created{
-     background-image:url("<?php echo UrlFrom($remainingIcon); ?>?tint=rgba(0,0,0)";
+     background-image:url("<?php echo UrlFrom($remainingIcon); ?>?tint=rgba(0,0,0)");
 }
 .segment.duedate{
-     background-image:url("<?php echo UrlFrom($remainingIcon); ?>?tint=rgba(0,0,0)";
+     background-image:url("<?php echo UrlFrom($remainingIcon); ?>?tint=rgba(0,0,0)");
 }
 
 <?php 
