-- Auto Commit - Changes made through Frontend Interface

--- a/app/ReferralManagement Generated Styles.customCSS.css
+++ b/app/ReferralManagement Generated Styles.customCSS.css
@@ -145,11 +145,11 @@ foreach($config->getParameters() as $key=>$value){
 .segment.overdue{
     background-image:url("<?php echo UrlFrom($overdueIcon); ?>?tint=rgba(50,50,50)");
 }
-.segment.complete{
+.segment.completed{
      background-image:url("<?php echo UrlFrom($remainingIcon); ?>?tint=rgba(50,50,50)");
 }
 .segment.created{
-     background-image:url("<?php echo UrlFrom($remainingIcon); ?>?tint=rgba(50,50,50)");
+     background-image:url("<?php echo UrlFrom($starredIcon); ?>?tint=rgba(50,50,50)");
 }
 .segment.duedate{
      background-image:url("<?php echo UrlFrom($remainingIcon); ?>?tint=rgba(50,50,50)");
