-- Auto Commit - Changes made through Frontend Interface

--- a/app/ReferralManagement Generated Styles.customCSS.css
+++ b/app/ReferralManagement Generated Styles.customCSS.css
@@ -146,10 +146,10 @@ foreach($config->getParameters() as $key=>$value){
     background-image:url("<?php echo UrlFrom($overdueIcon); ?>?tint=rgba(50,50,50)");
 }
 .segment.completed{
-     background-image:url("<?php echo UrlFrom($remainingIcon); ?>?tint=rgba(50,50,50)");
+     background-image:url("<?php echo UrlFrom($remainingIcon); ?>?tint=rgba(60, 179, 113)");
 }
 .segment.created{
-     background-image:url("<?php echo UrlFrom($starredIcon); ?>?tint=rgba(50,50,50)");
+     background-image:url("<?php echo UrlFrom($starredIcon); ?>?tint=rgba(106, 124, 233)");
 }
 .segment.duedate{
      background-image:url("<?php echo UrlFrom($overdueIcon); ?>?tint=rgba(60, 179, 113)");
