-- Auto Commit - Changes made through Frontend Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -583,12 +583,13 @@ span.inline-list-item {
     background-color: rgba(106, 233, 191, 0.5);
 }
 
+.bar.trans {
+    opacity: 0.1;
+}
 
-
-
-
-
-
+.bar.trans-1 {
+    opacity: 0.5;
+}
 
 
 
