-- Auto Commit - Changes made through Frontend Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -820,6 +820,22 @@ ul.item-tags li.min, .task-item.compact ul.item-tags li{
     padding-right: 5px;
 }
 
+span.field-value.duedate>input {
+    right: 5px;
+    z-index: 1;
+    background-color: #353e4b;
+    color: white;
+    width: 114px;
+    border: none;
+    box-shadow: 0 0 3px rgba(0,0,0,0.5);
+    border-radius: 11px;
+    padding: 3px 9px;
+    position: relative;
+    top: -2px;
+    margin-left: 5px;
+}
+
+
 ul.item-tags li {
     list-style: none;
     padding: 0px 12px;
