--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -821,6 +821,7 @@ ul.item-tags li.min, .task-item.compact ul.item-tags li{
 }
 
 span.field-value.duedate>input {
+    display:none;
     right: 5px;
     z-index: 1;
     background-color: #353e4b;
@@ -834,7 +835,9 @@ span.field-value.duedate>input {
     top: -2px;
     margin-left: 5px;
 }
-
+span.field-value.duedate.editing>input {
+    display:none;
+}
 
 ul.item-tags li {
     list-style: none;
