--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -836,7 +836,7 @@ span.field-value.duedate>input {
     margin-left: 5px;
 }
 span.field-value.duedate.editing>input {
-    display:none;
+    display:inline-block;
 }
 span.field-value.duedate.editing {
     font-size: 0;
