--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -579,6 +579,7 @@ span.inline-list-item {
     content: attr(data-theday);
     bottom: -50px;
     color: #EDC84C;
+    white-space: nowrap;
 }
 
 .bar-chart .bar.active>label {
