-- Auto Commit - Changes made through Frontend Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -963,7 +963,11 @@ span.image.noIcon, span.video.noIcon, span.document.noIcon, span.audio.noIcon, s
     position: relative;
 }
 
-
+span.layer.noIcon {
+    width: 40px;
+    height: 40px;
+    box-sizing: border-box;
+}
 
 
 
