nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -1567,6 +1567,7 @@ span.remove-btn:after {
     background-repeat: no-repeat;
     background-position: 10px center;
     padding-left: 50px;
+    cursor:pointer;
 }
 
 
