-- Auto Commit - Changes made through Frontend Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -1614,6 +1614,10 @@ span.remove-btn:after {
     cursor:pointer;
 }
 
+.synopsis-item:hover .counter {
+    color: #6AE9BF;
+}
+
 .synopsis-item>div {
     display: inline-block;
 }
