--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -1022,7 +1022,15 @@ span.layer.noIcon, .uilist-pageination button {
     margin-right:20px;
 }
 
+.uilist-pageination {
+    height: 18px;
+    margin: 10px;
 
+}
+
+.uilist-pageination button{
+    cursor:pointer;
+}
 
 
 
