-- Auto Commit - Changes made through Frontend Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -130,7 +130,7 @@ body.dragover .droppable.drop-spatial:after {
      
 }
 .file-list .file-item .file-container {
-    border:1px solid white;
+    background-color: white;
     height: 107px;
     
 }
