-- Auto Commit - Changes made through Frontend Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -131,7 +131,8 @@ body.dragover .droppable.drop-spatial:after {
 }
 .file-list .file-item .file-container {
     background-color: white;
-    height: 107px;
+    height: 108px;
+    width: 100px;
     
 }
 .file-list .file-item:hover .file-container {
