-- Auto Commit - Changes made through Frontend Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -122,6 +122,10 @@ body.dragover .droppable.invalid-type{
     display:none;
 }
 
+.file-item.droppable-hide {
+    display: none;
+}
+
 
 
 .file-list .file-item {
