-- Auto Commit - Changes made through Frontend Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -122,7 +122,7 @@ body.dragover .droppable.invalid-type{
     display:none;
 }
 
-.file-item.droppable-hide {
+body.dragover .file-item.droppable-hide {
     display: none;
 }
 
