--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -585,7 +585,11 @@ span.inline-list-item {
     text-overflow: ellipsis;
 }
 
-
+.section-help>* {
+    padding: 0 20px 20px 20px;
+    display: block;
+    color: cadetblue;
+}
 
 /* youtube */
 
