--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -92,6 +92,7 @@ body.dragover .droppable.drop-spatial{
     margin: 5px;
     min-height: 40px;
     display: inline-block;
+    min-width: 250px;
 }
 
 body.dragover .droppable.drop-letters:after {
