nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -1804,6 +1804,11 @@ img.static-map {
 
 
 
+.spatial-file-tile.add>.tileButton {
+    background-color: mediumseagreen;
+    background-image:url("{assets}/Map Item Icons/xsm_plus.png");
+}
+
 
 .ui-view[data-view="emptyListView"] {
     display: none;
