nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -1809,6 +1809,11 @@ img.static-map {
 .spatial-file-tile.add>.tileButton {
     background-color: mediumseagreen;
 }
+
+.tileOptionContainer.spatial-file-tile {
+    display: inline-block;
+}
+
 .spatial-file-tile.add>.tileButton:after {
     content: "+";
     color: white;
